# jukebox

./: .eslintrc.cjs  .prettierrc  AGENTS.md  README.md  bun.lockb  eslint.config.cjs  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml
adapters/static/: vite.config.ts
public/: manifest.json
src/: App.d.ts  entry.ssr.tsx  global.css  root.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: database.rs  main.rs  metadata.rs
src/components/: footer.tsx  nav.tsx  status-bar.tsx
src/components/AudioControls/: index.tsx
src/components/Shared/: MusicPicker.tsx  ShortcutsModal.tsx  SoundBars.tsx  VirtualList.tsx
src/components/audio-sidebar/: index.tsx  player.tsx  queue.tsx
src/components/greet/: greet.tsx
src/components/router-head/: router-head.tsx
src/components/starter/footer/: footer.tsx
src/components/starter/nav/: nav.tsx
src/components/svg/: ArrowDown.tsx  ArrowUp.tsx  Backspace.tsx  ClosedFolder.tsx  Command.tsx  Keyboard.tsx  MusicNote.tsx  NextTrack.tsx  OpenFolder.tsx  Pause.tsx  Play.tsx  PrevTrack.tsx  Shift.tsx  Star0.tsx  Star1.tsx  Star2.tsx
src/hooks/: useArtistPage.tsx  useAudioPlayer.tsx  useKeyboardShortcuts.ts  useLibraryPage.tsx  useLibraryScanner.ts  useStoragePage.tsx
src/routes/: index.tsx  layout.tsx
src/routes/albums/: index.tsx
src/routes/artists/: index.tsx
src/routes/settings/: index.tsx
src/routes/storage/: index.tsx
src/utils/: Files.ts
